2008-01-09  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: minor fixes

2008-01-09  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: add size_t and ssize_t

2008-01-09  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: add binding for g_find_program_in_path

2008-01-09  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: report error when using invalid
	  expression for ref/out arguments, fixes bug 480022

2008-01-09  Jürg Billeter  <j@bitron.ch>

	* gee/hashmap.vala: add return statements to silence C compiler

2008-01-09  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala: support nullable attribute in metadata

	* vapi/packages/gtk+-2.0/gtk+-2.0.metadata: set nullable attribute for
	  GtkTreeIter parameters where appropriate

	* vapi/gtk+-2.0.vapi, vapi/pango.vapi: regenerated

2008-01-09  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/scanner.l, vala/valaclass.vala,
	  vala/valacodecontext.vala, vala/valadatatype.vala,
	  vala/valainterface.vala, vala/valanulltype.vala,
	  vala/valasemanticanalyzer.vala, vala/valasymbolresolver.vala,
	  vala/valaunresolvedtype.vala, gobject/valaccodegenerator.vala,
	  gobject/valaccodegeneratorinvocationexpression.vala,
	  gobject/valaccodegeneratormethod.vala, compiler/valacompiler.vala:

	  Use non-null types by default when passing --enable-non-null to valac,
	  `?´ marks nullable types, deprecate `!´ to mark non-null types,
	  fixes bug 504222

2008-01-08  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: fix memory management with simple
	  conditional expressions, fixes bug 501587

	* tests/expressions-conditional.exp, tests/expressions-conditional.vala:
	  test conditional expression with strings

2008-01-08  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala, vala/valastruct.vala,
	  vapigen/valagidlparser.vala: support simple_type attribute in metadata

	* vapi/packages/gdk-2.0/gdk-2.0.metadata: mark GdkAtom as simple type
